UI: clarify "Remap Relative" tooltip

Resolves T62612